# InfSecurity

./: CMakeLists.txt
datasets/: datasets.cmake
docs/: HashFunctions.txt  Metrics.txt
include/: blake256.hpp  gost.hpp  hash2string.hpp  keccak.hpp  lazy.hpp  sha256.hpp
scripts/: third_party_list.txt
scripts/infra/: install_third_party.py  run_clang_tidy.py
scripts/research/: collector.py  converter.py  plot_collisions.py  plot_hist.py  plot_speed.py
src/: blake256.cpp  gost.cpp  keccak.cpp  main.cpp  sha256.cpp
